# dependency_parsing

assemblies_sysu_group20/: README.md  lexeme_dict.txt
assemblies_sysu_group20/google_test/: CMakeLists.txt  Parser.h  test_parse.cpp
assemblies_sysu_group20/src/: CMakeLists.txt  brain.cpp  brain.h  main.cpp
